--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,18 +35,22 @@
 
     </div>
     </section>
-    <div class="modal fade" id="modalBrowser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-body">
-            <h2>Correct! Yes, it is about the size of a walnut.</h2>
-          </div>
-          <div class="modal-footer background-nav-blue">
-            <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+
+
+        <div class="modal fade" id="modalBrowser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div style="text-align:center;" class="modal-body">
+                <img src="images/alert2.png" alt="" />
+                <h2 style="text-align:cent">The experience is best viewed in the latest available version of your browser.</h2>
+              </div>
+              <div class="modal-footer background-nav-blue">
+                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+
     <script src="/js/main.js" defer></script>
 
     <!-- Google Analytics: update UA-XXXXX-X -->
