--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,7 +41,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div style="text-align:center;" class="modal-body">
-                <img style="height: 100px;" src="images/alert2.png" alt="" />
+                <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
                 <h2 style="text-align:cent">The experience is best viewed in the latest available version of your browser.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
