--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,7 +45,7 @@
                 <h2 style="text-align:cent">The experience is best viewed in the latest available version of your browser.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
               </div>
             </div>
           </div>
