added modal for optimal browser width

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,10 +50,23 @@
             </div>
           </div>
         </div>
+        <div class="modal fade" id="modalBrowserWidth" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div style="text-align:center;" class="modal-body">
+                <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
+                <h2 style="text-align:cent">The experience is best viewed in the latest available version of your browser.</h2>
+              </div>
+              <div class="modal-footer background-nav-blue">
+                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
     <script src="/js/main.js" defer></script>
 
-  
+
     <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MWR95G"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
