--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,6 +2,13 @@
 <html class="no-js">
 
 <head>
+      <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KD4XWS');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <title>Backbone-Marionette-Gulp Starter</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +29,10 @@
 </head>
 
 <body id="home">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KD4XWS"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
     <div class="app">
       <section class="row no-pad top-nav text-center">
@@ -81,15 +92,7 @@
     <script src="/js/main.js" defer></script>
 
 
-    <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MWR95G"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MWR95G');</script>
-<!-- End Google Tag Manager -->
+
 
 </body>
 
