--- a/src/html/index.html
+++ b/src/html/index.html
@@ -66,7 +66,7 @@
             <div class="modal-content">
               <div style="text-align:center;" class="modal-body">
                 <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
-                <h2 style="text-align:center">The experience is best viewed in the latest available version of your browser.</h2>
+                <h2 style="text-align:center">The experience is best viewed on a larger device.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
                 <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
