--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     })(window,document,'script','dataLayer','GTM-KD4XWS');</script>
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
-    <title>Backbone-Marionette-Gulp Starter</title>
+    <title>Decoding Breast Cancer Virtual Lab</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
