--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,7 +56,7 @@
                 <h2 style="text-align:center">The experience is best viewed in the latest available version of your browser.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
                 <h2 style="text-align:center">View this site on a desktop or larger tablet for the best experience.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                 <h2 style="text-align:center">Enable JavaScript or <a href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
