--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,7 +56,7 @@
                 <h2 style="text-align:center">The experience is best viewed in the latest available version of your browser.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2 continue-fix"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
@@ -69,25 +69,20 @@
                 <h2 style="text-align:center">View this site on a desktop or larger tablet for the best experience.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2 continue-fix"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
         </div>
         <noscript>
-        <div class="modal fade" id="modalJavascript" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div style="text-align:center;" class="modal-body">
+
+              <div style="text-align:center;" class="">
                 <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
                 <h2 style="text-align:center">Enable JavaScript or <a href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/screen1" data-navigate="screen1" class="continue-2"><button id="next-page" type="button"  name="button">Continue</button></a>
+                <a href="/screen1" data-navigate="screen1" class="continue-2 continue-fix"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
-            </div>
-          </div>
-        </div>
       </noscript>
     <script src="/js/main.js" defer></script>
 
