open javasript thing in new tab

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -78,7 +78,7 @@
 
               <div style="text-align:center;" class="">
                 <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
-                <h2 style="text-align:center">Enable JavaScript or <a href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
+                <h2 style="text-align:center">Enable JavaScript or <a target="_blank" href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
                 <a href="/screen1" data-navigate="screen1" class="continue-2 continue-fix"><button id="next-page" type="button"  name="button">Continue</button></a>
