--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,10 +38,10 @@
       <section class="row no-pad top-nav text-center">
         <div class="col-md-12 top-nav">
           <div class="patient-nav">
-            <ul>
-              <li class="active"><img src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" height="30" width="30"><span class="border-bottom"><span class="uppercase">Patient One</span> Velma Belt</span></li>
-              <li><img src="images/patient1-final.jpg" alt="Michele Johnson" height="30" width="30"><span class="border-bottom"><span class="uppercase">Patient Two</span> Michele Johnson</span></li>
-              <li><img src="images/patient2-final.jpg" alt="Brittany Featherston" height="30" width="30"><span class="border-bottom"><span class="uppercase">Patient Three</span> Brittany Featherston</span></li>
+            <ul style="margin-left: .2em;">
+              <li class="pt-1"><img src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" height="30" width="30"><span class="border-bottom pat-nav-1"><span class="uppercase">Patient One</span> Velma Belt</span></li>
+              <li class="pt-2"><img src="images/patient1-final.jpg" alt="Michele Johnson" height="30" width="30"><span class="border-bottom pat-nav-2"><span class="uppercase">Patient Two</span> Michele Johnson</span></li>
+              <li class="pt-3"><img src="images/patient2-final.jpg" alt="Brittany Featherston" height="30" width="30"><span class="border-bottom pat-nav-3"><span class="uppercase">Patient Three</span> Brittany Featherston</span></li>
             </ul>
           </div>
           <h2>Introduction <span>to</span> Precision Medicine <span>and</span> Breast Cancer</h2>
