--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://use.typekit.net/dvn3wuu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
-</head> 
+</head>
 
 <body id="home">
   <!-- Google Tag Manager (noscript) -->
@@ -38,7 +38,7 @@
       <section class="row no-pad top-nav text-center">
         <div class="col-md-12 top-nav">
           <div class="patient-nav">
-            <ul style="margin-left: .2em;">
+            <ul style="margin-left: 0em;">
               <li class="pt-1"><img src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" height="30" width="30"><span class="border-bottom pat-nav-1"><span class="uppercase">Patient One</span> Velma Belt</span></li>
               <li class="pt-2"><img src="images/patient1-final.jpg" alt="Michele Johnson" height="30" width="30"><span class="border-bottom pat-nav-2"><span class="uppercase">Patient Two</span> Michele Johnson</span></li>
               <li class="pt-3"><img src="images/patient2-final.jpg" alt="Brittany Featherston" height="30" width="30"><span class="border-bottom pat-nav-3"><span class="uppercase">Patient Three</span> Brittany Featherston</span></li>
