--- a/src/html/index.html
+++ b/src/html/index.html
@@ -82,12 +82,19 @@
           </div>
         </div>
         <noscript>
-
-              <div style="text-align:center;" class="">
+<div style="background-color:rgba(0,0,0,.4);position:absolute;top:0;left:0;right:0;bottom:0;z-index:-1"></div>
+              <div style="text-align:center;background-color:white;    text-align: center;
+    background-color: white;
+    height: 100%;
+    width: 50%;
+    margin: 0 auto;
+    z-index: 999;">
                 <img style="height: 100px;width:100px;" src="images/alert2.png" alt="" />
-                <h2 style="text-align:center">Enable JavaScript or <a target="_blank" href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
+                <h2 style="text-align:center">Enable JavaScript or <a style="color:blue;" target="_blank" href="images/Decoding.Cancer.Virtual.Lab.Accessible.Content.Manuscript.pdf">click this link</a> to download a version of the content that is more accesible.</h2>
               </div>
-              <div class="modal-footer background-nav-blue">
+              <div class="modal-footer background-nav-blue" style="    width: 50%;
+    z-index: 999;
+    margin: 0 auto;">
                 <a href="/screen1" data-navigate="screen1" class="continue-2 continue-fix"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
       </noscript>
