--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
 
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/styles.css">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
 
